# gg-device-ops-component

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  config.json  recipe.yaml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  HOW_TO_CHECK_JOB_OUTPUT.md  TESTING_GUIDE.md
examples/: get-camera-intrinsics.sh  get-store-id.sh  run-diagnostics.sh
job-templates/: get-store-id-with-output.json  multi-step-test.json  multi-step-with-failure-handling.json  simple-multi-step.json
scripts/: build-and-package.sh  check-deployment.sh  deploy-and-test.sh  deploy-to-device.sh  deploy-to-group.sh  docker-build.sh  package-aarch64.sh  release.sh  remove-from-device.sh  remove-from-group.sh
scripts/e2e-tests/: README.md  check-job.sh  create-job.sh  test-multi-step.sh
src/: config.rs  error.rs  lib.rs  main.rs
src/executor/: command.rs  mod.rs
src/ipc/: client.rs  jobs.rs  mod.rs
src/models/: models.rs
src/security/: mod.rs  validation.rs
