[package]
name = "device-ops-component"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
chrono = "0.4"
async-trait = "0.1"
gg-sdk = { git = "https://github.com/aws-greengrass/aws-greengrass-component-sdk", branch = "main" }

[dev-dependencies]
mockall = "0.12"
tempfile = "3.8"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
